# Lab5

./: .gitignore  CMakeLists.txt  CubicRigidBody.h  DynamicArray.h  FaceCenterRigidBody.h  Linal.h  MatPoint.h  RigidBody.h  Vector.h  VolumeCenterRigidBody.h  main.cpp
